주석 수정 및 컨버터 구현